# viam-ws2801

./: Makefile  README.md  meta.json  pyproject.toml  requirements.txt  run.sh  setup.sh
src/: main.py
src/proto/: rgb.proto
src/rgb/: __init__.py  api.py  ws2801.py
src/rgb/proto/: rgb.proto  rgb_grpc.py  rgb_pb2.py  rgb_pb2.pyi
